# secret-santa

./: .gitlab-ci.yml  Cargo.toml  LICENSE.txt  README.md  TODO.md
.github/workflows/: pages.yml
.run/: Build --debug.run.xml  Build.run.xml  benchmark.run.xml  build.run.xml  build_web.sh.run.xml  ci.run.xml  run cli with input_prod.yml.run.xml  run_web.sh.run.xml  start.run.xml
cli/: Cargo.toml
cli/src/: benchmark.rs  lib.rs  main.rs
core/: Cargo.toml
core/src/: assignment_links.rs  cycle.rs  error.rs  lib.rs  solution.rs  solve.rs
core/src/data/: data_to_digraph.rs  generate_data.rs  mod.rs  participants_data.rs
core/src/graph/: digraph.rs  mod.rs  node.rs
core/src/methods/: mod.rs  solve_method.rs
core/src/methods/adjacency_matrix/: adjacency_matrix.rs  mod.rs
core/src/methods/hamiltonian_backtrack/: find_cycle.rs  hamiltonian_backtrack.rs  mod.rs
core/src/methods/hamiltonian_graph_naive/: hamiltonian_graph_naive.rs  mod.rs  solve_cycles.rs
core/src/methods/split_quatuors/: mod.rs  split_quatuors.rs
core/src/split_participants/: mod.rs  split.rs
data/: .gitignore  input_test.yml  input_test_13p.yml  input_test_2.yml  input_test_20p.yml
public/: index.html
public/fr/: affectation.html
utils/: Cargo.toml
utils/src/: bench.rs  chrono.rs  lib.rs  obfuscate.rs  recipient_uri.rs  relative_uri.rs
wasm/: Cargo.toml  build_web.sh  run_web.sh
wasm/src/: lib.rs
wasm/web/: index.html  index.js  package-lock.json  package.json  styles.css  webpack.config.js
wasm/web/fr/: affectation-v2.html  affectation.html  affectation.js
