[package]
name = "secret-santa-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
bench = []

[dependencies]
secret-santa-utils = { path = "../utils" }
anyhow = "1.0"
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
# for wasm compat
getrandom = { version = "0.2", features = ["js"] }
