[package]
name = "secret-santa-utils"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
bench = ["dep:peak_alloc"]

[dependencies]
log = "0.4"
peak_alloc = { version = "0.2.0", optional = true }
urlencoding = "2.1"
base64 = "0.21"
rand = "0.8"
# for wasm compat
getrandom = { version = "0.2", features = ["js"] }
