[package]
name = "secret-santa-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = [
    "console_error_panic_hook",
    "wee_alloc",
]

[dependencies]
secret-santa-core = { path = "../core" }
console_log = "1.0"
log = "0.4"
wasm-bindgen = "0.2"
wee_alloc = { version = "0.4", optional = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }
